--- a/DBwin/db.cfg
+++ b/DBwin/db.cfg
@@ -54,7 +54,7 @@ AGGIORNAMENTO	23		T127	-				....		Data_ultima_modifica		v			-1
 #  Parametri di configurazione   #
 ##################################
 
-STR url = "http://localhost/DBC/DB.php"		# Indirizzo della pagina del database
+STR url = "http://localhost/DB.php"			# Indirizzo della pagina del database
 INT maxRowResponse = 50						# Massimo numero di righe restituito (mettere 20, 50 o 100)
 INT minRefreshInterval = 20					# Intervallo minimo di refresh
 INT timeoutRefreshTolerance = 20			# Intervallo di tempo per il refresh prima del timeout
