--- a/DBwin/db.cfg
+++ b/DBwin/db.cfg
@@ -19,10 +19,7 @@
 # Ordine:			Numero per ordinamento in cui deve comparire nella dialog
 # Tipo:				T: testo, L: lista, D: data
 # Nome tabella:		Nome del parametro con cui interrogare la tabella corrispondente
-# Visibilità con:	assiemi
-#					schemi
-#					particolari
-#					commerciali
+# Visibilità con:	assiemi, schemi, particolari, commerciali
 # Label:			Testo della label a fianco della casella di input (i caratteri _ vengono sostituiti con <spc>)
 # readonly:			Se il campo deve essere bloccato durante i comandi di edit (non di aggiunta codici)     
 
